<resources>
    <!-- region General -->
    <string name="app_name">Petrol Watcher</string>
    <string name="error">Error</string>
    <string name="ok" translatable="false">OK</string>
    <string name="warning">Warning</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="field_should_not_be_blank">This field should not be blank</string>
    <string name="go_to">Go to</string>
    <string name="info">Information</string>
    <string name="version_format">Version %1$s</string>
    <!-- endregion -->

    <!-- region Accessibility -->
    <string name="description_navigation_open">Menu open</string>
    <string name="description_navigation_closed">Menu closed</string>
    <string name="description_my_location">My location</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_directions">Directions</string>
    <string name="description_remove_profile_picture">Remove profile picture</string>
    <string name="description_close">Close</string>
    <!-- endregion -->

    <!-- region Auth -->
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_email">Sign in with e-mail</string>
    <string name="hint_email">e-mail</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="error_empty_confirmation">Confirmation must not be empty</string>
    <string name="error_empty_email">e-mail must not be empty</string>
    <string name="error_password_and_confirmation_dont_match">Password and confirmation don\'t match</string>
    <string name="error_connection">Unfortunately we had a connection problem</string>
    <string name="error_facebook">Unfortunately we couldn\'t connect your Facebook account</string>
    <string name="error_google">Unfortunately we couldn\'t connect your Google account</string>
    <string name="try_again">Try again</string>
    <string name="name">Name</string>
    <string name="my_vehicles">My vehicles</string>
    <string name="take_photo">Take a photo</string>
    <string name="select_from_gallery">Select a photo from gallery</string>
    <string name="error_profile_picture_display_name">Error setting profile picture and display name</string>
    <string name="error_creating_account">Error creating account. Maybe this account already exists or you might be disconnected.</string>
    <string name="error_email_format">Invalid e-mail format</string>
    <string name="error_incorrect_email_password">Incorrect e-mail or password</string>
    <string name="warning_password_length">Password length must be at least 6 characters</string>
    <string name="my_account">My account</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="name_should_not_be_blank">The name should not be blank</string>
    <string name="sign_out_confirmation">Are you sure you want to sign out?</string>
    <!-- endregion -->

    <!-- region Vehicles -->
    <string name="description_swipe_to_delete">swipe to delete</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="trim_level">Trim level (e.g.: 2.0 GTI)</string>
    <string name="year">Year</string>
    <string name="fuel_capacity">Fuel capacity (ℓ)</string>
    <string name="avg_consumption_city">Average consumption - city (km/ℓ)</string>
    <string name="avg_consumption_motorway">Average consumption - motorway (km/ℓ)</string>
    <string name="automatic_input">Automatic input</string>
    <string name="manual_input">Manual input</string>
    <string name="model">Model</string>
    <string name="trim_level_format">Trim level: %1$s</string>
    <string name="capacity_format">Fuel capacity: %1$sℓ</string>
    <string name="avg_consumption_city_format">Average consumption - city: %1$skm/ℓ</string>
    <string name="avg_consumption_motorway_format">Average consumption - motorway: %1$skm/ℓ</string>
    <string name="details">Details</string>
    <string name="invalid_vehicle_data">Invalid vehicle data</string>
    <string name="factory_data">Factory data</string>
    <string name="calculated_data">Calculated data</string>
    <string name="calculate">Calculate</string>
    <string name="year_format">Year: %1$d</string>
    <string name="delete_vehicle">Delete vehicle</string>
    <string name="delete_vehicle_confirmation">Are you sure you want to delete this vehicle?</string>
    <string name="no_vehicles">No vehicles</string>
    <string name="vehicle_information_might_not_be_accurate">Vehicle information provided by the app might not be 100% accurate. If you notice something wrong, go to the menu at the top right corner of the screen and select \"manual input\" to enter the information yourself from your vehicle\'s owner manual.</string>
    <!-- endregion -->

    <!-- region Petrol stations -->
    <string name="stations_nearby">Stations nearby</string>
    <string name="address">Address</string>
    <string name="invalid_petrol_station_data">Invalid petrol station data</string>
    <string name="rating">Rating</string>
    <string name="distance_km_format">Distance: %1$.1fkm</string>
    <string name="distance_m_format">Distance: %1$.0fm</string>
    <string name="fuels">Fuels</string>
    <string name="add_fuel">Add fuel</string>
    <string name="price">Price</string>
    <string name="diesel">Diesel</string>
    <string name="ethanol">Ethanol</string>
    <string name="petrol">Petrol</string>
    <string name="regular">Regular</string>
    <string name="premium">Premium</string>
    <string name="delete_petrol_station">Delete petrol station</string>
    <string name="delete_petrol_station_confirmation">Are you sure you want to delete this petrol station?</string>
    <string name="info_petrol_stations_5km_radius">This list only shows petrol stations within a 5km radius.</string>
    <string name="no_petrol_stations_found">No petrol stations found in this location</string>
    <plurals name="rated_by_format">
        <item quantity="one">Rated by %1$d person</item>
        <item quantity="other">Rated by %1$d people</item>
    </plurals>
    <string name="rate">Rate</string>
    <string name="info_rating">Rate the quality of this station\'s fuel based on your experience</string>
    <string name="something_went_wrong">Something went wrong</string>
    <!-- endregion -->

    <!-- region Consumption -->
    <string name="selected_vehicle_format">Selected vehicle: %1$s</string>
    <string name="tank_level_start">Tank level (start)</string>
    <string name="tank_level_end">Tank level (end)</string>
    <string name="finish">Finish</string>
    <string name="odometer_start">Odometer (start) - km</string>
    <string name="odometer_end">Odometer (end) - km</string>
    <string name="predominant_road_type">Predominant road type</string>
    <string name="fuel_capacity_missing">This vehicle\'s fuel capacity is missing. Please check your vehicle\'s manual and enter it manually on the vehicle details screen.</string>
    <string name="invalid_distance">The distance you have entered is invalid.</string>
    <string name="invalid_tank_level">The final level of the tank must be less than the initial
        .</string>
    <string name="info_consumption">Fill in the fields after you\'ve completed a trip
        without refuelling</string>
    <!-- endregion -->

    <!-- region Cost planning -->
    <string name="vehicle">Vehicle</string>
    <string name="tank_level">Tank level</string>
    <string name="estimated_cost_format">Estimated cost: %1$s</string>
    <string name="estimated_fuel_amount_format">Estimated fuel amount: %1$dℓ</string>
    <string name="cost_planning">Cost planning</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="fuel_type">Fuel type</string>
    <string name="fuel_quality">Fuel quality</string>
    <!-- endregion -->

    <!-- region Predictions -->
    <string name="notification_message">New predictions for the average fuel prices in your area</string>
    <string name="description_predictions">Predictions based on average fuel prices collected weekly in your area</string>
    <string name="regular_petrol">Regular petrol</string>
    <string name="premium_petrol">Premium petrol</string>
    <!-- endregion -->
</resources>
