<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/find_stations">
        <menu>
            <group
                android:checkableBehavior="none"
                android:orderInCategory="1">
                <item
                    android:id="@+id/item_stations_nearby"
                    android:title="@string/stations_nearby"
                    android:icon="@drawable/ic_stations"
                    android:orderInCategory="2"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/my_account">
        <menu>
            <group
                android:checkableBehavior="none"
                android:orderInCategory="2">
                <item
                    android:id="@+id/item_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/ic_profile"
                    android:orderInCategory="1"/>

                <item
                    android:id="@+id/item_sign_out"
                    android:title="@string/sign_out"
                    android:icon="@drawable/ic_sign_out"
                    android:orderInCategory="2"/>
            </group>
        </menu>
    </item>

</menu>